syntax = "proto3";

service NotificationService {
    rpc sendNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
    string userId = 1;
    string message = 2;
    string type = 3;
    string priority = 4;
    string channel = 5;
}

message NotificationResponse {
    bool success = 1;
}
